--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <nav>
     <h1>Country Explorer</h1>
-    <div>
+    <div id="nav_data">
         <a href="#home">Home</a>
         <a href="#about">About</a>
         <a href="#contact">Contact</a>
@@ -47,7 +47,7 @@
 
 <!-- Footer Section -->
 <footer>
-    <p>&copy;2024 Countries Information. All Rights Reserved.</p>
+    <p>&copy;2024 Countries Information || All Rights Reserved.</p>
 </footer>
 <script src="script.js"></script>
 </body>
